Closed
Bug 233250
Opened 22 years ago
Closed 22 years ago
replace a spurrious assertion with a warning in nsUNIXCharset.cpp
Categories
(Core :: Internationalization, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: jshin1987, Assigned: jshin1987)
Details
(Keywords: intl)
Attachments
(1 file)
|
1.71 KB,
patch
|
smontagu
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
dbaron wrote to me about NS_ASSERTION in nsUNIXCharset.cpp which seems suspicous
to him. It's indeed spurrious. We'd better replace it with a warning.
| Assignee | ||
Comment 1•22 years ago
|
||
| Assignee | ||
Comment 2•22 years ago
|
||
Comment on attachment 140733 [details] [diff] [review]
patch
asking for r/sr.
Attachment #140733 -
Flags: superreview?(dbaron)
Attachment #140733 -
Flags: review?(smontagu)
Comment 3•22 years ago
|
||
Is there a general mechanism or channel for drawing attention to Warnings,
Assertsions and other debug output that is otiose. My lizards give copious
output that looks like this:
WARNING: empty damage rect: update caller to avoid fcn call overhead, file
../../../../../mozilla/layout/html/base/src/nsFrame.cpp, line 2506
WARNING: empty damage rect: update caller to avoid fcn call overhead, file
../../../../../mozilla/layout/html/base/src/nsFrame.cpp, line 2506
WARNING: empty damage rect: update caller to avoid fcn call overhead, file
../../../../../mozilla/layout/html/base/src/nsFrame.cpp, line 2506
WARNING: empty damage rect: update caller to avoid fcn call overhead, file
../../../../../mozilla/layout/html/base/src/nsFrame.cpp, line 2506
WARNING: empty damage rect: update caller to avoid fcn call overhead, file
../../../../../mozilla/layout/html/base/src/nsFrame.cpp, line 2506
++WEBSHELL == 4
++DOMWINDOW == 4
###!!! ASSERTION: Pixels must be locked here: 'pixelFlags & (1 << 7)', file
../../../../mozilla/gfx/src/mac/nsImageMac.cpp, line 154
Break: at file ../../../../mozilla/gfx/src/mac/nsImageMac.cpp, line 154
###!!! ASSERTION: Pixels must be locked here: 'pixelFlags & (1 << 7)', file
../../../../mozilla/gfx/src/mac/nsImageMac.cpp, line 177
Break: at file ../../../../mozilla/gfx/src/mac/nsImageMac.cpp, line 177
###!!! ASSERTION: Pixels must be locked here: 'pixelFlags & (1 << 7)', file
../../../../mozilla/gfx/src/mac/nsImageMac.cpp, line 154
Break: at file ../../../../mozilla/gfx/src/mac/nsImageMac.cpp, line 154
Now I can easily fix my sources, but who would intersted in such patches?
Attachment #140733 -
Flags: superreview?(dbaron) → superreview+
Comment 4•22 years ago
|
||
Comment on attachment 140733 [details] [diff] [review]
patch
r=smontagu
Attachment #140733 -
Flags: review?(smontagu) → review+
| Assignee | ||
Comment 5•22 years ago
|
||
thanks. checked in.
re: comment #3. Ben, I don't think all of them are useless. Actually, I believe
most of them are 'real'. If you're sure some of them are indeed otiose, please
file a new bug along with your patch. Although NS_WARNING and NS_ASSERTION are
noops in opt. build, it's still worth getting rid of them because that would
increase the code readability.
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Just for reference, I removed the "empty damage rect" assertion, and the "pixels
must be locked" assertion is related to bug 228441 and is pointing out a real
problem.
You need to log in
before you can comment on or make changes to this bug.
Description
•