bug 233250: replace a spurrious assertion with a warning (r=smontagu, sr=dbaron)